<resources>
    <string name="app_name" translatable="false">Shippy</string>
    <string name="title_activity_find_someone" translatable="false">Shippy</string>
    <string name="mainActivity">Shippy - The delivery community</string>
    <string name="permission_position_explanation">Hey! can we know where you are?</string>
    <string name="permission_position_explanation_ok">Fair enough</string>
    <string name="sendfromtext">Send From</string>
    <string name="sendtotext">Send To</string>
    <string name="date_send_not_set">Please provide the pick-up date</string>
    <string name="dropoff_location_not_set">Please provide the drop-off location</string>
    <string name="pickup_location_not_set">Please provide the pick-up location</string>
    <string name="no_network_connectivity">Please enable data communication</string>
    <string name="number_packages_not_set">Please provide the number of packages</string>
    <string name="size_packages_not_set">Please provide the size of the packages</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_surname">Surname</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="user_current_city">Location</string>
    <string name="register_me">Register</string>
    <string name="register_not_now">Later</string>
    <string name="registration_input_incomplete">Please tell us more about you</string>
    <string name="registration_firstname_missing">Please provide your first name</string>
    <string name="registration_surname_missing">Please provide your surname</string>
    <string name="user_location_not_entered">For the registration process, we only need to know the city you live in</string>
    <string name="registration_phonenumber_missing">Please provide your phone number</string>
    <string name="offers_towards">Available offers</string>
    <string name="okay">OK</string>
    <string name="join_the_community">Join the community!</string>
    <string name="explanation_main_activity">Hey</string>
    <string name="explanation_main_activity2">there</string>
    <string name="explanation_main_activity3">, welcome!</string>
    <string name="explanation_main_activity_pt2">To help you get started we already pre-filled some of the required fields. </string>
    <string name="explain_usage_search2">Pick-up city</string>
    <string name="explain_usage_search3">Pick-up date</string>
    <string name="explain_usage_search4">How many packages?</string>
    <string name="explain_usage_search5">Drop-off city</string>
    <string name="explain_usage_search6">Press the Search button if you are looking to send a package. Press the Publish button if you want to deliver a package.</string>
    <string name="confirm_publish">Publish offer</string>
    <string name="enter_pickup_location">Pick-up location</string>
    <string name="enter_dropoff_location">Drop-off location</string>
    <string name="searchbutton_main_activity">Send a package</string>
    <string name="postbutton_main_activity">I\'m travelling</string>
    <string-array name="package_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="travelling_by">
        <item>Car</item>
        <item>Train</item>
        <item>Plane</item>
    </string-array>
    <string name="publish">Publish</string>
    <string name="please_confirm">Anything to add?</string>
    <string name="please_register">One final step</string>
    <string name="thank_you">All packed</string>
    <string name="enjoy">Tell your friends!</string>
    <string name="back_to_main">Back</string>
    <string name="comment_indication">Here you can provide more information about your offer, for example:\r\n
    \u2022 How would you want to organise the handover/delivery of the package??\n
    \u2022 When would you like to deliver the package? \n
    \u2022 Would you like to be paid? How much? \n
    \u2022 … anything else you think is important \n</string>
    <string name="add_profile_picture">Select picture</string>
    <string-array name="camera_or_gallery">
        <item>From Gallery</item>
        <item>New Selfie</item>
    </string-array>
    <string name="choose_gallery_or_camera">Choose from Gallery or Picture?</string>
    <string name="legal_notice">Terms and Conditions</string>
    <string name="privacy_notice">Privacy and data collection</string>
    <string name="legal_notice2">We, at Shippy, believe that official post services are very important and useful as they provide a reliable and secure way to send goods around. \r\n
        \n
        We also believe that there is a category of goods that do not deserve so much \"officiality\" and that our users are happy as long as their package arrives in good order. This is exactly why we decided to create this service. \r\n
        The below bullet points only serve at making this a bit clearer:\r\n
        \n
        \u2022 We strongly recommend you agree with each other to agree on the content of the package. This allows for a safer and easier transaction.\r\n
        \n
        \u2022 We recommend you only send/transport goods whose price is such that sending them trough the official post services is too expensive.\r\n
        \n
        \u2022 When you choose to publish an offer on Shippy, you agree to share your contact details with other users of Shippy. For more details about our data privacy policy, please see below.\r\n
        \n
        \u2022 Using Shippy is at your own risk and we strongly recommend you take actions to prevent any undesirable outcome. For example by following the above-mentioned advices. Please feel free to reach out to us if you have any idea on how we can make this service more secure.\r\n
    </string>
    <string name="privacy_notice2"> At Shippy, when it comes to privacy, we become very, very serious:\r\n
        \n
        \u2022 We believe your privacy is not a merchandise.\r\n
        \n
        \u2022 We will never, ever, ever sell your personal data\r\n
        \n
        \u2022 We actually do not collect your personal data. We do store your contact details when you publish an offer but that is strictly to ensure other users can contact you.\r\n
        </string>
    <string name="privacy_notice3">
        Another important principle we follow is that we should keep improving on our Service and never consider your trust in us as permanent. We have thus decided to collect strictly anonymously some usage metrics that will drive our business decisions. For example, we are interested in knowing:\r\n
        \n
        \u2022 How long does it take for a user to go from one screen to another?\r\n
        \n
        \u2022 How often did a user open the app before starting to use it?\r\n
        \n
        \u2022 How many results were returned when the user hit the \"Search\" button?\r\n
        \n
        We like to think of ourselves as your neighbourhood shop who has come to learn about your habits as you become a loyal customer. The only difference is that we never speak about you or your habits to anyone else.
    </string>
    <string name="contact_us">Contact us</string>
    <string name="contact_us2">We value your input and would love to hear from you so we can better improve our app. If you want to get in touch with us, you can send us an e-mail (click here), or go to the App Store and leave a comment there.</string>
    <string name="privacy_button">The Legal stuff</string>
    <string name="thankyou_registration_pt1">Welcome</string>
    <string name="thankyou_registration_pt2">and Welcome!</string>
    <string name="thankyou_registration">Thank you very much for registering with Shippy</string>
    <string name="share_with_friends">Thank you for sharing</string>
    <string name="share_with_friends2">Share</string>
    <string name="thank_you_firstname">Thank you</string>
    <string name="share_link_pt1">I\'m going to</string>
    <string name="share_link_pt2">and can deliver for you a small package if you want :)
    http://play.google.com/store/apps/details?id=com.app.shippy.android</string>
    <string name="share_link_noresults">Hey, did you hear of the Shippy app? It connects travellers to those who want to send a package. Check it out http://play.google.com/store/apps/details?id=com.app.shippy.android</string>
    <string name="network_error">Oops</string>
    <string name="network_erro2">A network error happened, please retry again.</string>
    <string name="no_results_found">Hey, thank you for using Shippy we do appreciate a lot! We unfortunately do not have any offer that matches your criteria yet but we\'re working hard. Maybe you could help us a bit and invite your friends to join us?</string>
    <string name="orientation_iam_sending">I have something to send and I want to find someone who can carry it for me</string>
    <string name="orientation_iam_travelling">I am travelling and would like to carry a package for other persons.</string>
    <string name="orientation_publish">Publish my trip</string>
    <string name="orientation_search">Search offers</string>
    <string name="main_set_preferences">Set preferences for travel mean</string>
    <string name="main_next">Next</string>
    <string name="main_pickup_city">Pick-up city</string>
    <string name="main_pickup_date">Pick-up date</string>
    <string name="main_dropoff_city">Drop-off city</string>
    <string name="main_dropoff_date">Drop-off date</string>
    <string name="main_i_am_sending">I\'m sending</string>
    <string name="main_i_am_travelling">I\'m travelling</string>
    <string name="main_trip_details">Trip details</string>
    <string name="main_parcel_details">Parcel details</string>
    <string name="pickup_chooser_travelling_text">Where and where are you going?</string>
    <string name="pickup_chooser_sending_text">Where do you want send from and when?</string>
    <string name="dropoff_chooser_sending_text">What is the destination of your package?</string>
    <string name="dropoff_chooser_travelling_text">Where can you drop-off the package?</string>
    <string name="transport_chooser_sending_text">Any preference for the transport method?</string>
    <string name="transport_chooser_travelling_text">How are you travelling?</string>
    <string name="transport_chooser_no_transport">Please choose at least 1 transport method</string>
    <string name="google_key" translatable="false">AIzaSyBsMFAjzpz-9YZkwzO3bO0MlvUwN04iRBs</string>
    <string name="backend_url" translatable="false">http://jsonplaceholder.typicode.com/posts</string>
    <string name="api_key" translatable="false">the_key_goes_here</string>
    <string name="search_end_point" translatable="false">querytheengine</string>
    <string name="usage_end_point" translatable="false">usageendpoint</string>
    <string name="postoffer_end_point" translatable="false">postoffer</string>
    <string-array name="number_packages_array" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="user_details_storage" translatable="false">com.app.shippy.android.user_details</string>
    <string name="saved_user_surname" translatable="false">surname</string>
    <string name="saved_user_firstname" translatable="false">firstname</string>
    <string name="saved_user_picture" translatable="false">picture</string>
    <string name="saved_user_phonenumber" translatable="false">phoneNumber</string>
    <string name="saved_user_latitude" translatable="false">pickup_latitude</string>
    <string name="saved_user_longitude" translatable="false">pickup_longitude</string>
    <string name="saved_user_address" translatable="false">pickup_address</string>
</resources>