<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_share"
        android:checkable="false"
        android:menuCategory="alternative"
        android:title="@string/share_with_friends2"
        android:visible="true"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_contact"
        android:checkable="false"
        android:menuCategory="alternative"
        android:title="@string/contact_us"
        android:visible="true"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_legal"
        android:checkable="false"
        android:menuCategory="alternative"
        android:title="@string/privacy_button"
        android:visible="true"
        app:showAsAction="never" />
</menu>