<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.aalloul.packets.RegistrationFragment"
    android:background="@color/colorBackground"
    android:alpha="1">


    <TextView
        android:text="@string/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/relativeLayout_registration"
        android:layout_alignStart="@+id/relativeLayout_registration"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="@string/welcome_text_pt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text2"
        android:layout_below="@+id/welcome_text"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lineSpacingExtra="4sp" />

    <TextView
        android:text="@string/welcome_text_pt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text3"
        android:layout_below="@+id/welcome_text2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:lineSpacingExtra="4sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativeLayout_registration"
        android:background="@color/cardColor"
        android:layout_height="180dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="14dp"
        android:layout_centerInParent="false"
        android:layout_below="@id/welcome_text3"
        android:layout_marginTop="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/user_icon_bevel"
            android:id="@+id/user_picture"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:layout_marginTop="50dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:contentDescription="@string/add_profile_picture"
            android:elevation="3dp"
            android:background="@drawable/backgroundstate"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:ems="10"
            android:id="@+id/user_first_name"
            android:hint="@string/enter_first_name"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/user_surname"
            android:layout_alignStart="@+id/user_surname"
            android:textSize="18sp"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/regColor"
            android:textColor="@color/regColor"
            android:typeface="monospace"
            android:paddingRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:ems="10"
            android:id="@+id/user_surname"
            android:layout_alignParentBottom="false"
            android:layout_toRightOf="@+id/user_picture"
            android:layout_toEndOf="@+id/user_picture"
            android:layout_marginLeft="10dp"
            android:hint="@string/enter_surname"
            android:layout_below="@+id/user_first_name"
            android:layout_marginBottom="-10dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/regColor"
            android:textColor="@color/regColor"
            android:typeface="monospace"
            android:paddingRight="10dp"
            android:layout_marginStart="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/user_phone_number"
            android:hint="@string/enter_phone_number"
            android:layout_below="@+id/user_surname"
            android:layout_toRightOf="@+id/user_picture"
            android:layout_toEndOf="@+id/user_picture"
            android:layout_marginLeft="10dp"
            android:inputType="phone"
            android:layout_marginBottom="-10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/regColor"
            android:textColorHint="@color/regColor"
            android:typeface="monospace"
            android:paddingRight="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_location"
            android:layout_toRightOf="@+id/user_picture"
            android:layout_below="@+id/user_phone_number"
            android:layout_marginLeft="15dp"
            android:hint="@string/user_current_city"
            android:paddingTop="10dp"
            android:layout_toEndOf="@+id/user_picture"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:textColor="@color/regColor"
            android:textColorHint="@color/regColor"
            android:typeface="monospace"
            android:paddingRight="10dp"
            android:layout_marginStart="15dp"
            android:paddingEnd="10dp"
            android:paddingStart="5dp" />

        <TextView
            android:text="@string/add_profile_picture"
            android:layout_height="wrap_content"
            android:id="@+id/caption_user_picture"
            android:gravity="center"
            android:textSize="10sp"
            android:layout_below="@+id/user_picture"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:typeface="monospace"
            android:layout_marginStart="5dp"
            android:layout_width="80dp" />

    </RelativeLayout>

    <Button
        android:text="@string/register_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_me"
        android:background="@android:color/holo_green_dark"
        android:textColor="@color/cast_expanded_controller_progress_text_color"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textStyle="normal|bold"
        android:layout_below="@+id/relativeLayout_registration"
        android:layout_centerVertical="false"
        android:layout_centerInParent="false"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:elevation="14dp" />

    <Button
        android:text="@string/register_not_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_not_now"
        android:background="@drawable/backgroundstate"
        android:layout_alignTop="@+id/register_me"
        android:layout_toRightOf="@+id/register_me"
        android:textAllCaps="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/register_me" />

    <TextView
        android:text="@string/privacy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/privacyButton"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="false"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_me"
        android:layout_marginTop="40dp" />

</RelativeLayout>
</ScrollView>